Fixinng 2-Column spacing

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -10198,13 +10198,15 @@ a.video_preview::before {
       padding-bottom: 40px;
       padding-bottom: 0;
       clear: both;
-      float: left; }
+      float: left;
+      width: 100%; }
       .explorer .layout-columns__2 .layout__heading {
         margin-bottom: 32px;
         padding-bottom: 0; }
       .explorer .layout-columns__2 .field-content-wrapper-content {
         list-style: none;
-        clear: both; }
+        clear: both;
+        width: 100%; }
         .explorer .layout-columns__2 .field-content-wrapper-content > .layout-column {
           clear: both;
           margin-top: 40px;
