--- a/docroot/themes/custom/ucsf/scss/explorer/_explorer.scss
+++ b/docroot/themes/custom/ucsf/scss/explorer/_explorer.scss
@@ -840,6 +840,7 @@
       padding-bottom: 0;
       clear: both;
       float: left;
+      width: 100%;
 
       .layout__heading {
         margin-bottom: $space-four;
@@ -849,6 +850,7 @@
       .field-content-wrapper-content { // PL: .layout-columns__two
         list-style: none;
         clear: both;
+        width: 100%;
 
         > .layout-column {
           clear: both;
